syntax = "proto3";

package com.example.auth;

option java_multiple_files = true;
option java_package = "com.example.server.grpc";
option java_outer_classname = "AuthProto";

message AuthResponse{
  int64 accountId = 1;
  int64 userId = 2;
  string email = 3;
  string phone = 4;
  string otp = 5;
  string personalId = 6;
  bool isActive = 7;
  repeated string roles = 8;
  bool isEnabled = 9;
}

message AccessTokenRequest{
  string accessToken=1;
}
service AuthTokenService{
  rpc parseToken(AccessTokenRequest) returns (AuthResponse);
}